--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-saoijdfiojsdfpioewjroiwerjipwoerjweiojrwepojrwipoeriojweroijweijrjioijwerioj
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adare Restuarant</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+
+        <header>
+            <img src="images/logo-adare-restaurant.png" alt="Logo for Adare Restuarant">
+        </header>
+            
+        <nav>
+            <a href="#">HOME</a>
+            <a href="#">MENU</a>
+            <a href="#">ORDER ONLINE</a>
+            <a href="#">GIFT VOUCHER</a>
+            <a href="#">CATERING</a>
+            <a href="#">CONTACT</a>
+        </nav>
+
+        <main>
+            <h1>Let's Meat</h1>
+            <p>We love sharing good food with great people. We bring over 30 years industry experience and passion to  <a href="http://www.google.com" target="_blank">Adare.</a>  With a dishes that are carefully designed to bring you a truly satisfying Irish food experience that you are sure to remember. </p>
+
+            <a href="mailto:bryantd223@gmail.com?Subject=Reservation" target="_blank">MAKE RESERVATION</a>
+        </main>
+
+        <section class ="maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.9749529893147!2d-84.10294958473767!3d9.936041876857349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fcaba6edf033%3A0xf77fea35eae244c8!2sLa%20Sabana%20Park!5e0!3m2!1sen!2sus!4v1653796329023!5m2!1sen!2sus" width="1024" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/pc1Mb4bNDeM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+
+        <section class ="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
+        <footer>
+            <p>
+                Main St, Blackabbey, Adare, Co. Limerick - Copyright 2017©
+            </p>
+        </footer>
+
+
+    </div>
+</body>
+</html>
