--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,1 @@
-I am so-and-so Bryant De Luna-Peralta and this is my ITIS3135 First Course Page.
+I am Bryant De Luna-Peralta and this is my ITIS3135 First Course Page.
