--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 I'm Bryant De Luna-Peralta and this is the root of my website.
-bryantd0208.github.io/itis3135/
+<a href="bryantd0208.github.io/itis3135/">Link to other website</a>
