--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 I'm Bryant De Luna-Peralta and this is the root of my website.
-<a href="bryantd0208.github.io/itis3135/">bryantd0208.github.io/itis3135/</a>
+<a href="bryantd0208.github.io/itis3135/" target="_blank">bryantd0208.github.io/itis3135/</a>
