--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-I'm Bryant De Luna-Peralta and this is the root of my website.
-<a href="bryantd0208.github.io/itis3135/" target="_blank">bryantd0208.github.io/itis3135/</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>
+        I'm Bryant De Luna-Peralta and this is the root of my website.
+    </p>
+    <p>
+        <a href="/itis3135/" target="_blank">bryantd0208.github.io/itis3135/</a>
+    </p>
+
+</body>
+</html>
