--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         I'm Bryant De Luna-Peralta and this is the root of my website.
     </p>
     <p>
-        <a href="https://bryantd0208.github.io/itis3135/" target="_blank">bryantd0208.github.io/itis3135/</a>
+        <a href="https://bryantd0208.github.io/itis3135/">Link to class folder</a>
     </p>
 
 </body>
