--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,18 @@
-I am Bryant De Luna-Peralta and this is my ITIS3135 First Course Page.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>
+        I am Bryant De Luna-Peralta and this is my ITIS3135 First Course Page.
+    </p>
+
+    <p>
+        <a href="https://bryantd0208.github.io/">Link back to root</a>
+    </p>
+</body>
+</html>
