--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -10,9 +10,8 @@
     <p>
         I am Bryant De Luna-Peralta and this is my ITIS3135 First Course Page.
     </p>
-
     <p>
-        <a href="https://bryantd0208.github.io/">Link back to root</a>
+        <a href="https://bryantd0208.github.io/">Link to root page</a>
     </p>
 </body>
 </html>
