--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,13 +16,21 @@
                        <li><a href="https://bryantd0208.github.io/">Github Root Page</a></li>
                        <li><a href="https://bryantd0208.github.io/itis3135">Github WebPage</a></li>
                        <li><a href="https://webpages.charlotte.edu/bdelunap/itis3135/">UNCC Webpage</a></li>
-                       <li><a href="https://github.com/bryantd0208">Github</a></li>
-                       <li><a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/">LinkedIn</a></li>
+                       <li><a href="https://github.com/bryantd0208" target="_blank">Github</a></li>
+                       <li><a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank">LinkedIn</a></li>
                    </ul> 
                 </li>
-                <li>Menu</li>
-                <li>Menu</li>
-                <li>Menu</li>
+                <li>About Me</li>
+                <li>Course Assignments</li>
+                <li>Other Links
+                    <ul class="sub-nav">
+                        <li><a href="https://www.freecodecamp.org/bryant_deluna" target="_blank">FreeCodeCamp</a></li>
+                        <li><a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank">Codecademy</a></li>
+                        <li><a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank">Personal Canvas Profile</a></li>
+                        <li><a href="https://uncc.instructure.com/courses/178981" target="_blank">Course Page</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">??Special Link??</a></li>
+                    </ul> 
+                </li>
             </ul>
         </nav>
     </div>
