About me and Footing Changes

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITIS 3135 Main Page</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <div class="container">
@@ -20,8 +20,8 @@
                        <li><a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank">LinkedIn</a></li>
                    </ul> 
                 </li>
-                <li>About Me</li>
-                <li>Course Assignments</li>
+                <li><a href="/itis3135/introduction.html">About Me</a></li>
+                <li><a href="/itis3135/assignments">Course Assignments</a></li>
                 <li>Other Links
                     <ul class="sub-nav">
                         <li><a href="https://www.freecodecamp.org/bryant_deluna" target="_blank">FreeCodeCamp</a></li>
@@ -50,17 +50,11 @@
     </header>
     
     <main>
-
+        <h2>Coming Soon...</h2>
     </main>
 
     <footer>
-
+        <h3>Designed by De Luna's Designs &copy; 2022</h3>
     </footer>
-    <!-- <p>
-        I am Bryant De Luna-Peralta and this is my ITIS3135 First Course Page.
-    </p>
-    <p>
-        <a href="https://bryantd0208.github.io/">Link to root page</a>
-    </p> -->
 </body>
 </html>
