--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITIS 3135 Main Page</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles/intro.css">
 </head>
 <body>
     <div class="container">
         <nav>
             <ul>
+                <li><a href="/itis3135/index.html">Homepage</a></li>
                 <li>Important Links
                    <ul class="sub-nav">
                        <li><a href="https://bryantd0208.github.io/">Github Root Page</a></li>
@@ -20,8 +21,8 @@
                        <li><a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank">LinkedIn</a></li>
                    </ul> 
                 </li>
-                <li><a href="/itis3135/index.html">Homepage</a></li>
-                <li>Course Assignments</li>
+                <li><a href="/itis3135/introduction.html">About Me</a></li>
+                <li><a href="/itis3135/assignments.html">Course Assignments</a></li>
                 <li>Other Links
                     <ul class="sub-nav">
                         <li><a href="https://www.freecodecamp.org/bryant_deluna" target="_blank">FreeCodeCamp</a></li>
