--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Assignments</title>
-    <link rel="stylesheet" href="styles/assignments.css">
+    <title>Course Contract</title>
+    <link rel="stylesheet" href="styles/contract.css">
 </head>
 <body>
     <div class="container">
@@ -64,4 +64,5 @@
         <h3>Designed by De Luna's Designs &copy; 2022</h3>
     </footer>
 </body>
+</html>
 </html>
