September Assignments Upload

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer>
-        <h3>Designed by De Luna's Designs &copy; 2022</h3>
+        <h3><a href="/itis3135/delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
     </footer>
 </body>
 </html>
