--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         I'm Bryant De Luna-Peralta and this is the root of my website.
     </p>
     <p>
-        <a href="/itis3135/index.html">Link to class page</a>
+        <a href="./itis3135/index.html">Link to class page</a>
     </p>
 
 </body>
