--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -5,79 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles/intro.css">
+    <link rel="stylesheet" href="styles/default.css">
+    <script src="https://kit.fontawesome.com/1c8eefd787.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <nav>
-            <ul>
-                <li><a href="/itis3135/index.html">Homepage</a></li>
-                <li>Important Links
-                   <ul class="sub-nav">
-                       <li><a href="https://bryantd0208.github.io/">Github Root Page</a></li>
-                       <li><a href="https://bryantd0208.github.io/itis3135">Github WebPage</a></li>
-                       <li><a href="https://webpages.charlotte.edu/bdelunap/itis3135/">UNCC Webpage</a></li>
-                       <li><a href="https://github.com/bryantd0208" target="_blank">Github</a></li>
-                       <li><a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank">LinkedIn</a></li>
-                   </ul> 
-                </li>
-                <li><a href="/itis3135/introduction.html">About Me</a></li>
-                <li><a href="/itis3135/assignments.html">Course Assignments</a></li>
-                <li>Other Links
-                    <ul class="sub-nav">
-                        <li><a href="https://www.freecodecamp.org/bryant_deluna" target="_blank">FreeCodeCamp</a></li>
-                        <li><a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank">Codecademy</a></li>
-                        <li><a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank">Personal Canvas Profile</a></li>
-                        <li><a href="https://uncc.instructure.com/courses/178981" target="_blank">Course Page</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">??Special Link??</a></li>
-                    </ul> 
-                </li>
-            </ul>
-        </nav>
-    </div>
 
     <header>
-        <h1>
-            About Me
-        </h1>
-        <figure>
-            <img src="/itis3135/images/paddleboarding.png">
-            <figcaption>Me In Costa Rica Paddle Boarding</figcaption>
-        </figure>
+        <div class="navbar">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    </li>
+                    <li><a href="introduction.html">About Me</a></li>
+                    <li><a href="assignments.html">Course Assignments</a></li>
+                     <li>Webpages
+                       <ul class="sub-nav">
+                           <li><a href="https://bryantd0208.github.io/">Github Root Page</a></li>
+                           <li><a href="https://bryantd0208.github.io/itis3135">Github WebPage</a></li>
+                           <li><a href="https://webpages.charlotte.edu/bdelunap/itis3135/">UNCC Webpage</a></li>
+                       </ul> 
+                </ul>
+            </nav>
+        </div>    
+        <h1>Bryant De Luna-Peralta | Breathtaking Dalmadoodle | ITIS 3135</h1>
     </header>
 
     <main>
-        <h2>
+        <h2>About Me</h2>
+        <figure class="introPic">
+            <img src="/itis3135/images/paddleboarding.png">
+            <figcaption>Me In Costa Rica Paddle Boarding</figcaption>
+        </figure>
+        <h3>
             Favorite Quote
-        </h2>
+        </h3>
         <p>
             "Nothing is impossible. The word itself says 'I'm possible!'"
             <br>— Audrey Hepburn
         </p>
 
-        <h2>
+        <h3>
             Personal Background
-        </h2>
+        </h3>
         <p>
             Originally from La Grange, NC but moved to the city in hope of finding something new and different and have definitely not been let down.
         </p>
-        <h2>
+        <h3>
             Professional Background
-        </h2>
+        </h3>
         <p>
             Mainly worked in restaurants but have done the research and interned at a nonprofit.
         </p>
-        <h2>
+        <h3>
             Academic Background
-        </h2>
+        </h3>
         <p>
             Current Juinor at UNCC working towards a Master's Degree in Computer Science and Bachelor's Degree in Mathematics.
         </p>
         <section class="programming">
-            <h2>
+            <h3>
                 Programming/Software Background
-            </h2>
-            <p>Not Comfortable&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Expert</p>
+            </h3>
+            <p class="comfort notComfy">Not Comfortable</p>
+            <p class="comfort expert">Expert</p>
                 <div class="row">
                     <div class="column left">
                         <p>HTML/CSS</p>
@@ -130,9 +120,9 @@
                 </div>
         </section>
         <section class="classes">
-            <h2>
+            <h3>
                 Current Classes
-            </h2>
+            </h3>
             <p>
                 <ul>
                     <li>ITCS 6156 Machine Learning: AI and ML are super interesting</li>
@@ -143,28 +133,37 @@
                 </ul>
             </p>
         </section>
-        <h2>
+        <h3>
             Graduating Year: <br>2024
-        </h2>
-        <h2>
+        </h3>
+        <h3>
             Story/Item
-        </h2>
+        </h3>
         <p>
             Put a little story or interesting item here to remember you by
         </p>
-        <h2>
+        <h3>
             From North Carolina
-        </h2>
-        <h2>
+        </h3>
+        <h3>
             I'd also like to share
-        </h2>
+        </h3>
         <p>
             I love watching movies, playing video games, and playing soccer. I have also just recently traveled to Costa Rica and it was amazing. Highly recommend!
         </p>
     </main>
-
+    
     <footer>
-        <h3><a href="/itis3135/delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
+        <h3><a href="delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
+        <div class="media">
+            <ul>
+                <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
+                <a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank"><li><i class="fa-solid fa-code"></i></li></a>
+                <a href="https://github.com/bryantd0208" target="_blank"><li><i class="fa-brands fa-github"></i></li></a>
+                <a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank"><li><i class="fa-brands fa-linkedin"></i></li></a>
+                <a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank"><li><i class="fa-solid fa-graduation-cap"></i></li></a>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
