--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Contract</title>
+    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Course Contract</title>
     <link rel="stylesheet" href="styles/contract.css">
 </head>
 <body>
@@ -61,7 +61,26 @@
     </main>
 
     <footer>
-        <h3><a href="/itis3135/delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
+        <section class="mainFooter">
+            <h3><a href="delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
+            <div class="media">
+                <ul>
+                    <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
+                    <a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank"><li><i class="fa-solid fa-code"></i></li></a>
+                    <a href="https://github.com/bryantd0208" target="_blank"><li><i class="fa-brands fa-github"></i></li></a>
+                    <a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank"><li><i class="fa-brands fa-linkedin"></i></li></a>
+                    <a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank"><li><i class="fa-solid fa-graduation-cap"></i></li></a>
+                </ul>
+            </div>
+        </section>
+        <section class="validation">
+            <a href="https://validator.w3.org/check?uri=referer">
+                <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
+            </a>
+        </section>
     </footer>
 </body>
 </html>
