--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryant De Luna|ITIS 3135|Home</title>
+    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Home</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://kit.fontawesome.com/1c8eefd787.js" crossorigin="anonymous"></script>
 <body>
@@ -14,7 +14,6 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    </li>
                     <li><a href="introduction.html">About Me</a></li>
                     <li><a href="assignments.html">Course Assignments</a></li>
                      <li>Webpages
@@ -31,20 +30,33 @@
     
     <main>
         <h2>Home</h2>
-        <h3>More coming soon...</p>
+        <h3>More coming soon...</h3>
     </main>
     
     <footer>
-        <h3><a href="delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
-        <div class="media">
-            <ul>
-                <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
-                <a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank"><li><i class="fa-solid fa-code"></i></li></a>
-                <a href="https://github.com/bryantd0208" target="_blank"><li><i class="fa-brands fa-github"></i></li></a>
-                <a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank"><li><i class="fa-brands fa-linkedin"></i></li></a>
-                <a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank"><li><i class="fa-solid fa-graduation-cap"></i></li></a>
-            </ul>
+        <div class="mainFooter">
+            <h3><a href="delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
+            <div class="media">
+                <ul>
+                    <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
+                    <a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank"><li><i class="fa-solid fa-code"></i></li></a>
+                    <a href="https://github.com/bryantd0208" target="_blank"><li><i class="fa-brands fa-github"></i></li></a>
+                    <a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank"><li><i class="fa-brands fa-linkedin"></i></li></a>
+                    <a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank"><li><i class="fa-solid fa-graduation-cap"></i></li></a>
+                </ul>
+            </div>
+        </div>
+        <div class="validation">
+            <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+                <img src="images/button-valid-html5.gif" width="88" height="31" alt="Validate webpage HTML." />
+            </a>            
+            <a href="," id="validation_link_css">
+                <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
+            </a>
         </div>
     </footer>
+    <script src="scripts/default.js">
+
+    </script>
 </body>
 </html>
