--- a/itis3135/breathtakingdalmadoodle.co/index.html
+++ b/itis3135/breathtakingdalmadoodle.co/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="row">
             <div class="column left">
-                <h1>DeLuna's Designs</h1>
+                <h1>Breathtaking Dalmadoodle inc.</h1>
             </div>
             <div class="column right">
                 <section class="placeholder">
