--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|HTML Tables</title>
-    <link rel="stylesheet" href="styles/default.css">
-    <script src="https://kit.fontawesome.com/1c8eefd787.js" crossorigin="anonymous"></script>
+    <div data-include="components/head.html"></div>
+    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Home</title>
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    </li>
-                    <li><a href="introduction.html">About Me</a></li>
-                    <li><a href="assignments.html">Course Assignments</a></li>
-                     <li>Webpages
-                       <ul class="sub-nav">
-                           <li><a href="https://bryantd0208.github.io/">Github Root Page</a></li>
-                           <li><a href="https://bryantd0208.github.io/itis3135">Github WebPage</a></li>
-                           <li><a href="https://webpages.charlotte.edu/bdelunap/itis3135/">UNCC Webpage</a></li>
-                       </ul> 
-                </ul>
-            </nav>
-        </div>    
-        <h1>Bryant De Luna-Peralta | Breathtaking Dalmadoodle | ITIS 3135</h1>
-    </header>
+    <div data-include="components/header.html"></div>
     
     <main>
         <h2>HTML Tables</h2>
@@ -165,28 +143,8 @@
         </section>
     </main>
 
-    <footer>
-        <section class="mainFooter">
-            <h3><a href="delunadesigns.co/index.html">Designed by De Luna's Designs &copy; 2022</a></h3>
-            <div class="media">
-                <ul>
-                    <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
-                    <a href="https://www.codecademy.com/profiles/bryant_deluna" target="_blank"><li><i class="fa-solid fa-code"></i></li></a>
-                    <a href="https://github.com/bryantd0208" target="_blank"><li><i class="fa-brands fa-github"></i></li></a>
-                    <a href="https://www.linkedin.com/in/bryant-de-luna-peralta-51a0671b8/" target="_blank"><li><i class="fa-brands fa-linkedin"></i></li></a>
-                    <a href="https://uncc.instructure.com/courses/178981/users/164769" target="_blank"><li><i class="fa-solid fa-graduation-cap"></i></li></a>
-                </ul>
-            </div>
-        </section>
-        <section class="validation">
-            <a href="https://validator.w3.org/check?uri=referer">
-                <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer">
-                <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
-            </a>
-        </section>
-    </footer>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/HTMLInclude.js"></script>
+    <script src="scripts/default.js"></script>
 </body>
-</html>
 </html>
