De Luna's Designs Update

--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,6 +3,7 @@
 <head>
     <div data-include="components/head.html"></div>
     <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Home</title>
+</head>
 <body>
     <div data-include="components/header.html"></div>
 
