--- a/itis3135/delunasdesigns.co/index.html
+++ b/itis3135/delunasdesigns.co/index.html
@@ -42,6 +42,9 @@
         ul{
             list-style: square;
         }
+        .projects{
+            text-decoration: underline;
+        }
         .mainFooter {
             background-color: #92dbe5ae;
             padding: 15px;
@@ -110,6 +113,9 @@
             <p>Email: bdelunap@delunasdesigns.co</p>
             <p>Phone Number: (252) 582-0553</p>
             <p>Address: 9201 University City Blvd, Charlotte, NC 28223</p>
+
+            <h2>Current Projects:</h2>
+            <a class="projects" href="/itis3135/">ITIS 3135</a>
     </main>
 
     <footer>
