--- a/itis3135/delunasdesigns.co/index.html
+++ b/itis3135/delunasdesigns.co/index.html
@@ -120,7 +120,7 @@
 
     <footer>
         <div class="mainFooter">
-            <h3><a href="delunasdesigns.co">Deluna's Designs inc. &copy; 2022</a></h3>
+            <h3><a href="">Deluna's Designs inc. &copy; 2022</a></h3>
             <div class="media">
                 <ul>
                     <a href="https://www.freecodecamp.org/bryant_deluna" target="_blank"><li><i class="fa-brands fa-free-code-camp"></i></li></a>
