--- a/itis3135/assignments.html
+++ b/itis3135/assignments.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <div data-include="components/head.html"></div>
-    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Home</title>
+    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Assignments</title>
 </head>
 <body>
     <div data-include="components/header.html"></div>
@@ -25,6 +25,10 @@
             <h3>September 9th, 2022</h3>
             <ul>
                 <li><a href="firstscript.html">First Script</a></li>
+            </ul>
+            <h3>September 9th, 2022</h3>
+            <ul>
+                <li><a href="polygon.html">Polygons</a></li>
             </ul>
         </section>
     </main>
