--- a/itis3135/firstscript.html
+++ b/itis3135/firstscript.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <div data-include="components/head.html"></div>
-    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Home</title>
+    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|First Script</title>
 </head>
 <body>
     <div data-include="components/header.html"></div>
