--- a/itis3135/stuff/FUN🤪 LI!!LE*()FILE.HTM
+++ b/itis3135/stuff/FUN🤪 LI!!LE*()FILE.HTM
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>qwdckmslkmq2wxdok123po2,3kmo</title>
     <style>
         img{
             width: 400px;
