--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -2,7 +2,7 @@ x\\\<!DOCTYPE html>
 <html lang="en">
 <head>
     <div data-include="components/head.html"></div>
-    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Home</title>
+    <title>Bryant De Luna-Peralta|Breathtaking Dalmadoodle|ITIS 3135|Website Evaluations</title>
 </head>
 <body>
     
