--- a/itis3135/delunasdesigns.co/index.html
+++ b/itis3135/delunasdesigns.co/index.html
@@ -115,7 +115,7 @@
             <p>Address: 9201 University City Blvd, Charlotte, NC 28223</p>
 
             <h2>Current Projects:</h2>
-            <a class="projects" href="/itis3135/">ITIS 3135</a>
+            <a class="projects" href="../">ITIS 3135</a>
     </main>
 
     <footer>
@@ -133,10 +133,10 @@
         </div>
         <div class="validation">
             <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-                <img src="/itis3135/images/button-valid-html5.gif" width="88" height="31" alt="Validate webpage HTML." />
+                <img src="../images/button-valid-html5.gif" width="88" height="31" alt="Validate webpage HTML." />
             </a>            
             <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-                <img src="/itis3135/images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
+                <img src="../images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </div>
     </footer>
