--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -11,7 +11,7 @@
     <main>
         <h2>About Me</h2>
         <figure class="introPic">
-            <img src="/itis3135/images/paddleboarding.png">
+            <img src="images/paddleboarding.png">
             <figcaption>Me In Costa Rica Paddle Boarding</figcaption>
         </figure>
         <h3>
