--- a/itis3135/assignments.html
+++ b/itis3135/assignments.html
@@ -30,6 +30,11 @@
             <ul>
                 <li><a href="polygon.html">Polygons</a></li>
             </ul>
+            <h3>September 9th, 2022</h3>
+            <ul>
+                <li><a href="calculator_try.html">Attempted Calculator</a></li>
+                <li><a href="calculator_fcc.html">FreeCodeCamp Calculator</a></li>
+            </ul>
         </section>
     </main>
 
