--- a/itis3135/assignments.html
+++ b/itis3135/assignments.html
@@ -43,6 +43,10 @@
             <ul>
                 <li><a href="project_1.html">Client Project Overview</a></li>
             </ul>
+            <h3>September 9th, 2022</h3>
+            <ul>
+                <li><a href="hobby/">Midterm Project</a></li>
+            </ul>
         </section>
     </main>
 
